infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tubes-fe
  labels:
    app.kubernetes.io/name: tubes-fe
    app.kubernetes.io/managed-by: kubectl
