infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tubes-fe
    namespace: tubes-fe
    labels:
        app.kubernetes.io/name: tubes-fe
        app.kubernetes.io/component: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app.kubernetes.io/name: tubes-fe
    template:
        metadata:
            labels:
                app.kubernetes.io/name: tubes-fe
                app.kubernetes.io/component: frontend
        spec:
            containers:
                - name: tubes-fe
                  image: ghcr.io/reynadi531/tubes-cc-fe:sha-4df6fc3
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 8080
                        protocol: TCP
                  resources:
                      requests:
                          cpu: 25m
                          memory: 64Mi
                      limits:
                          cpu: 250m
                          memory: 128Mi
                  readinessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 10
                      periodSeconds: 30
                  securityContext:
                      runAsNonRoot: true
                      runAsUser: 1001
                      readOnlyRootFilesystem: true
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
            automountServiceAccountToken: false
