infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubes-fe
  namespace: tubes-fe
  labels:
    app.kubernetes.io/name: tubes-fe
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: tubes-fe
