infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yuki-fe
  namespace: yuki-fe
  labels:
    app.kubernetes.io/name: yuki-fe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: yuki-fe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yuki-fe
                port:
                  name: http
